--- a/index.html
+++ b/index.html
@@ -1,52 +1,73 @@
 <style>
-    #wrap {
+
+    ul, li {
+        margin: 0;
+        padding: 0;
+    }
+    #main {
         display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        text-align: center;
+    }
+    #wrap {
+        flex-basis: 100%;
+        display: flex;
+        box-shadow: inset 0px 0px 5px 5px lightgray;
         overflow: hidden;
-        width: 200px;
-        border: 5px solid gray;
+        width: 50%;
     }
     #scroll {
         flex: 1;
-        margin: 0;
-        padding: 0;
+        font-size: 0;        
         list-style-type: none;
         white-space: nowrap;
         transition: transform .5s ease-in-out;
     }
     .item {
-        margin: 0;
-        padding: 0;
+        padding-top: 5px;
+        padding-bottom: 5px;
         display: inline-block;
-        background: tomato;
         width: 100%;
-        height: 100px;
+        height: 100%;
+        text-align: center;
+    }
+    #buttons {
+        width: 100%;
+        opacity: 50%;
+        margin-top: 5px;
         text-align: center;
     }
 </style>
 
 <html>
-    <div id=wrap>
-        <ul id="scroll">
-            <li class=item>1...</li>
-            <li class=item>2...</li>
-            <li class=item>3...</li>
-            <li class=item>4</li>
-        </ul>
+    <div id="main">
+        <div id=wrap>
+            <ul id="scroll">
+                <li class=item><img src="https://cdnjs.cloudflare.com/ajax/libs/webicons/2.0.0/webicons/webicon-apple.png" /></li>
+                <li class=item><img src="https://cdnjs.cloudflare.com/ajax/libs/webicons/2.0.0/webicons/webicon-bitbucket.png" /></li>
+                <li class=item><img src="https://cdnjs.cloudflare.com/ajax/libs/webicons/2.0.0/webicons/webicon-creativecloud.png" /></li>
+                <li class=item><img src="https://cdnjs.cloudflare.com/ajax/libs/webicons/2.0.0/webicons/webicon-facebook.png" /></li>
+            </ul>
+        </div>
+        <div id="buttons">
+            <button id="back">&lt;&lt;</button>
+            <button id="forward">&gt;&gt;</button>
+        </div>
     </div>
-    <br />
-    <button id="back">&lt;&lt;</button>
-    <button id="forward">&gt;&gt;</button>    
 
     <script>
         let pos = 0
         const scroll = document.getElementById("scroll")
+        const size = scroll.children.length
+        const width = scroll.offsetWidth
         document.getElementById("back").addEventListener("click", e => {
             if (pos == 0) return;
-            scroll.style = `transform: translate3d(${++pos * 204}px, 0, 0)`
+            scroll.style = `transform: translate3d(${++pos * width}px, 0, 0)`
         })
         document.getElementById("forward").addEventListener("click", e => {
-            if (pos == -3) return;
-            scroll.style = `transform: translate3d(${--pos * 204}px, 0, 0)`
+            if (pos - 1 == (size * -1)) return;
+            scroll.style = `transform: translate3d(${--pos * width}px, 0, 0)`
         })
     </script>    
 </html>
